assets/custom.css
/* ------------------ */
/*   common: colors   */
/* ------------------ */

body {
    background-color: #f8f8f8!important;
    font-weight: 400;
    transition: background-color 400ms, border-color 400ms, color 400ms;
}
body.dark-mode {
    background-color: #101828!important;
    color: #90a0b8;
}

header nav.navbar,
.datasets section .filters-group,
.datasets section .count-group,
.datasets section .selected-facets-group,
.datasets section .items-group,
.datasets section .loading-indicator,
.dataset-facets .facet-field .list-group,
.dataset .details-top .actions-row,
.dataset .details-top .header-row,
.dataset .description,
.dataset .distributions,
.dataset .keywords,
.dataset .info {
    box-shadow: 0 .3rem .7rem 0 rgba(0,0,0,.1) !important;
}
.dark-mode header nav.navbar,
.dark-mode .datasets section .filters-group,
.dark-mode .datasets section .count-group,
.dark-mode .datasets section .selected-facets-group,
.dark-mode .datasets section .items-group,
.dark-mode .datasets section .loading-indicator,
.dark-mode .dataset-facets .facet-field .list-group,
.dark-mode .dataset .details-top .actions-row,
.dark-mode .dataset .details-top .header-row,
.dark-mode .dataset .description,
.dark-mode .dataset .distributions,
.dark-mode .dataset .keywords,
.dark-mode .dataset .info {
    box-shadow: 0 0 0 1px rgb(255 255 255 / 15%) !important;
}

header nav.navbar .nav-link {
    color: #304868;
    font-size: .875rem;
    font-weight: 400;
}
.dark-mode header nav.navbar .nav-link {
    color: #90a0b8 !important;
}

.dataset-facets .list-group-item,
.datasets section .count-group,
.datasets section .selected-facets-group {
    color: #304868;
    font-size: .875rem;
    font-weight: 600;
}
.dark-mode .dataset-facets .list-group-item,
.dark-mode .datasets section .count-group,
.dark-mode .datasets section .selected-facets-group {
    background-color: #202838;
    color: #90a0b8;
}

header nav.navbar .navbar-brand {
    color: #304868;
    font-size: .875rem;
    font-weight: 700 !important;
}
.dark-mode header nav.navbar .navbar-brand {
    color: #90a0b8;
}

.dropdown-menu {
    font-size: .875rem;
}
.dropdown-menu .btn {
    font-size: .875rem;
}

.dataset-facets .list-group-item-action.active .facet-count,
.datasets section .selected-facets-group .badge {
    background: #cb0c9f !important;
    border-color: #cb0c9f !important;
    color: #fff !important;
}
.dark-mode .dataset-facets .list-group-item-action.active .facet-count,
.dark-mode .datasets section .selected-facets-group .badge {
    background-color: #f070b8 !important;
    border-color: #f070b8 !important;
}

.dataset-facets .facet-header-item {
    background-image: linear-gradient(310deg,#7928ca,#ff0080);
    background-position-x: 25%;
    background-size: 150%;
}
.dataset-facets .list-group-item-action.active:hover {
    background-color: #fff;
    background-image: linear-gradient(310deg,#7928ca60,#ff008060);
    background-position-x: 25%;
    background-size: 150%;
}
.dataset-facets .list-group-item-action.active {
    background-color: #fff;
    background-image: linear-gradient(310deg,#7928ca40,#ff008040);
    background-position-x: 25%;
    background-size: 150%;
}
.dataset-facets .list-group-item-action:focus,
.dataset-facets .list-group-item-action:hover {
    background-color: #fff;
    background-image: linear-gradient(310deg,#7928ca20,#ff008020);
    background-position-x: 25%;
    background-size: 150%;
}
.dark-mode .dataset-facets .facet-header-item {
    background-image: linear-gradient(310deg,#981858,#f070b8);
}
.dark-mode .dataset-facets .list-group-item-action.active:hover {
    background-color: #101828;
    background-image: linear-gradient(310deg,#981858f0,#f070b8f0);
}
.dark-mode .dataset-facets .list-group-item-action.active {
    background-color: #101828;
    background-image: linear-gradient(310deg,#981858b0,#f070b8b0);
}
.dark-mode .dataset-facets .list-group-item-action:focus,
.dark-mode .dataset-facets .list-group-item-action:hover {
    background-color: #101828;
    background-image: linear-gradient(310deg,#98185880,#f070b880);
    color: #e0e8f0;
}

.datasets section .items-group .dataset a:hover {
    border-color: #cb0c9f40 !important;
}
.dark-mode .datasets section .items-group .dataset a:hover {
    border-color: #f070b8a0 !important;
}

/* ------------------ */
/*  common: buttons   */
/* ------------------ */

.btn.btn-secondary,
input.form-control,
a > .rounded-pill,
.pagination > li > button.page-link {
    background: #fff !important;
    border: 1px solid #cb0c9f;
    border-radius: .5rem;
    color: #cb0c9f !important;
    font-size: .875rem;
    font-weight: 400;
    letter-spacing: -0.03rem;
    line-height: 1.4rem;
    padding: .5rem .75rem;
    text-align: center;
}
.dark-mode .btn.btn-secondary,
.dark-mode input.form-control,
.dark-mode a > .rounded-pill,
.dark-mode .pagination > li > button.page-link {
    background-color: #202838 !important;
    border-color: #f070b8;
    color: #90a0b8 !important;
}
.dark-mode input.form-control::placeholder {
    color: #90a0b8 !important;
}
input.form-control {
    text-align: left;
}
a > .rounded-pill {
    line-height: 1rem;
}
.pagination > li.active > button.page-link {
    background-color: #fff !important;
    background-image: linear-gradient(310deg,#7928ca40,#ff008040) !important;
    background-position-x: 25% !important;
    background-size: 150% !important;
    border-color: #cb0c9f !important;
    color: #cb0c9f !important;
}
.dark-mode .pagination > li.active > button.page-link {
    background-color: #101828 !important;
    background-image: linear-gradient(310deg,#981858b0,#f070b8b0) !important;
    border-color: #f070b8 !important;
    color: #e0e8f0 !important;
}
/* ... */

